Add yearly progress graph in punchcards

--- a/app/views/punchcards/show.html.haml
+++ b/app/views/punchcards/show.html.haml
@@ -26,6 +26,7 @@
 .row.row-cards
   .col-lg-6
     = render 'latest_entries'
+    = render 'yearly_graph'
   .col-lg-6
     = render 'comparisons'
     = render 'goal_progress'
