--- a/app/views/punchcards/_yearly_graph.html.haml
+++ b/app/views/punchcards/_yearly_graph.html.haml
@@ -1,7 +1,7 @@
-.row
+.row.row-cards
   .col-md-12
     .card
       .card-header
         %h3.card-title Yearly Progress
       .card-body
-        #yearly-progress{style: 'height: 15rem', 'data-source': @card.yearly_progress}
+        #yearly-progress.c3{style: 'height: 10rem;', 'data-source': @card.yearly_progress}
