Add temporary logo

--- a/app/views/landing/landing.html.haml
+++ b/app/views/landing/landing.html.haml
@@ -16,7 +16,7 @@
         .container
           .d-flex.align-items-center.position-relative
             %a.logo{:href => "/"}
-              %img{:alt => "Tabler UI Kit", :src => "/img/tabler.svg", :title => ""}/
+              = image_tag 'hourglass_logo.svg', title: 'Hourglass'
               %div
                 Hourglass
             %a.header-menu-btn
