--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,6 +2,7 @@
   .container
     .d-flex
       = link_to root_path, class: 'header-brand' do
+        = image_tag 'hourglass_logo.svg', title: 'Hourglass', width: 32, height: 32
         Hourglass
 
       .d-flex.order-lg-2.ml-auto
