--- a/app/views/home/pricing.html.haml
+++ b/app/views/home/pricing.html.haml
@@ -1,8 +1,12 @@
-.page-header
-  %h1.page-title Pricing
+.row.mb-5
+  .col-md-12
+    .text-center
+      %h1
+        %strong Pricing Plans
 
-.row
+      %h4.text-muted Simple pricing plans for your needs
 
+.row.align-items-center.justify-content-center
   / Free Plan
   .col-sm-6.col-lg-3
     .card
