--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -2,9 +2,8 @@
 
 %html
   %head
-    %title Hourglass - Pricing
+    %title Hourglass
 
-    /= stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'landing'
     = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Rubik:400,400i,500,600,700|Quicksand:700|Indie+Flower:400', rel: 'stylesheet'
 
