--- a/app/views/home/pricing.html.haml
+++ b/app/views/home/pricing.html.haml
@@ -31,23 +31,4 @@
 
   / Premium Plan
   .col-sm-6.col-lg-3
-    .card
-      .card-status.bg-green
-      .card-body.text-center
-        .card-category
-          Premium
-        .display-3.my-4
-          $10
-        %ul.list-unstyled.leading-loose
-          %li
-            %strong Unlimited
-            Punchcards
-          %li
-            %i.fe.fe-check.text-success.mr-2
-            Unlimited Entries
-          %li
-            %i.fe.fe-check.text-success.mr-2
-            Reports & Statistics
-
-        .text-center.mt-6
-          = link_to 'Choose Plan', new_user_registration_path, class: 'btn btn-success btn-block'
+    = render 'home/premium_plan', mode: :select
