--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -7,4 +7,4 @@
 /= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js'
 
 = csrf_meta_tags
-= favicon_link_tag 'hourglass_logo.svg'
+= favicon_link_tag 'favicon.png'
