Rename app to Chroniker and fix favicons

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,8 +2,8 @@
   .container
     .d-flex
       = link_to root_path, class: 'header-brand' do
-        = image_tag 'hourglass_logo.svg', title: 'Hourglass', width: 32, height: 32
-        Hourglass
+        = image_tag 'hourglass_logo.svg', title: 'Chroniker', width: 32, height: 32
+        Chroniker
 
       .d-flex.order-lg-2.ml-auto
 
