--- a/app/views/layouts/pricing.html.haml
+++ b/app/views/layouts/pricing.html.haml
@@ -2,7 +2,7 @@
 
 %html
   %head
-    %title Hourglass :: Pricing
+    %title Chroniker :: Pricing
 
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
