--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -13,4 +13,4 @@
               %li.list-inline-item= link_to 'Contact', root_path
 
       .col-12.col-lg-auto.mt-3.mt-lg-0.text-center
-        Copywright &copy; 2019 Hourglass
+        Copywright &copy; 2019 Chroniker
