--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,10 +1,7 @@
-%title Hourglass
+%title Chroniker
 
 = stylesheet_link_tag 'application', media: 'all'
 = javascript_include_tag 'application'
-
-/ Bootstrap
-/= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js'
 
 = csrf_meta_tags
 = favicon_link_tag 'favicon.png'
