--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -1,16 +1,23 @@
 !!! 5
-
 %html
   %head
-    %title Hourglass
+    %title Chroniker :: The time tracker for masters
+
+    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
+    %meta{:charset => "UTF-8"}
+    %meta{:content => "width=device-width,initial-scale=1.0,maximum-scale=5.0,minimum-scale=1.0,shrink-to-fit=no", :name => "viewport"}
+    %meta{:content => "ie=edge", "http-equiv" => "X-UA-Compatible"}
+    %meta{:content => "no-cache", "http-equiv" => "pragma"}
+    %meta{:content => "index,follow", :name => "robots"}
+    %meta{:content => "Chroniker, the time tracker for masters", :name => "description"}
 
     = stylesheet_link_tag 'landing'
     = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Rubik:400,400i,500,600,700|Quicksand:700|Indie+Flower:400', rel: 'stylesheet'
 
     = javascript_include_tag 'application'
-
     = javascript_include_tag "https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"
 
+    = favicon_link_tag 'favicon.png'
 
   %body
     = yield
